# Modeling

./: CMakeLists.txt  Id.cpp  Id.h  main.cpp  ovf_wrapper.cpp  ovf_wrapper.hpp  utils.cpp  utils.h
data/: small_geom_X.csv  top_bottom_voltages_L40_r0.5.csv
geom/: 1d.ovf  cube.ovf  geometry_magnetic_network_L40_r0.5.ovf  geometry_small_text.ovf  volts_1d.tsv  volts_four_wires_all.tsv  volts_four_wires_three.tsv  wires.ovf  wires_weird.ovf  wires_weird2.ovf
